@@ -75,5 +75,6 @@ void ActionNaked(int* params);
 void ActionPetra(int* params);
 void ActionSkinColour(int* params);
 void ActionSoundTester(int* params);
+void ActionTest(int* params);
 
 #endif
